@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2023 The Thingsboard Authors
+ * Copyright © 2016-2025 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,22 +15,23 @@
  */
 package org.thingsboard.server.service.notification;
 
-import com.google.common.util.concurrent.Futures;
-import com.google.common.util.concurrent.ListenableFuture;
+import com.google.common.util.concurrent.FutureCallback;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.thingsboard.common.util.DonAsynchron;
 import org.thingsboard.rule.engine.api.NotificationCenter;
+import org.thingsboard.server.cache.limits.RateLimitService;
 import org.thingsboard.server.common.data.EntityType;
 import org.thingsboard.server.common.data.User;
+import org.thingsboard.server.common.data.id.EntityId;
 import org.thingsboard.server.common.data.id.NotificationId;
 import org.thingsboard.server.common.data.id.NotificationRequestId;
 import org.thingsboard.server.common.data.id.NotificationRuleId;
 import org.thingsboard.server.common.data.id.NotificationTargetId;
 import org.thingsboard.server.common.data.id.TenantId;
 import org.thingsboard.server.common.data.id.UserId;
+import org.thingsboard.server.common.data.limit.LimitedApi;
 import org.thingsboard.server.common.data.notification.AlreadySentException;
 import org.thingsboard.server.common.data.notification.Notification;
 import org.thingsboard.server.common.data.notification.NotificationDeliveryMethod;
@@ -39,17 +40,22 @@ import org.thingsboard.server.common.data.notification.NotificationRequestConfig
 import org.thingsboard.server.common.data.notification.NotificationRequestStats;
 import org.thingsboard.server.common.data.notification.NotificationRequestStatus;
 import org.thingsboard.server.common.data.notification.NotificationStatus;
+import org.thingsboard.server.common.data.notification.NotificationType;
+import org.thingsboard.server.common.data.notification.info.GeneralNotificationInfo;
+import org.thingsboard.server.common.data.notification.info.NotificationInfo;
 import org.thingsboard.server.common.data.notification.info.RuleOriginatedNotificationInfo;
 import org.thingsboard.server.common.data.notification.settings.NotificationSettings;
+import org.thingsboard.server.common.data.notification.settings.UserNotificationSettings;
+import org.thingsboard.server.common.data.notification.targets.MicrosoftTeamsNotificationTargetConfig;
 import org.thingsboard.server.common.data.notification.targets.NotificationRecipient;
 import org.thingsboard.server.common.data.notification.targets.NotificationTarget;
 import org.thingsboard.server.common.data.notification.targets.platform.PlatformUsersNotificationTargetConfig;
+import org.thingsboard.server.common.data.notification.targets.platform.UsersFilter;
 import org.thingsboard.server.common.data.notification.targets.slack.SlackNotificationTargetConfig;
 import org.thingsboard.server.common.data.notification.template.DeliveryMethodNotificationTemplate;
 import org.thingsboard.server.common.data.notification.template.NotificationTemplate;
 import org.thingsboard.server.common.data.notification.template.WebDeliveryMethodNotificationTemplate;
 import org.thingsboard.server.common.data.page.PageDataIterable;
-import org.thingsboard.server.common.data.plugin.ComponentLifecycleEvent;
 import org.thingsboard.server.common.msg.queue.ServiceType;
 import org.thingsboard.server.common.msg.queue.TbCallback;
 import org.thingsboard.server.common.msg.queue.TopicPartitionInfo;
@@ -59,14 +65,10 @@ import org.thingsboard.server.dao.notification.NotificationService;
 import org.thingsboard.server.dao.notification.NotificationSettingsService;
 import org.thingsboard.server.dao.notification.NotificationTargetService;
 import org.thingsboard.server.dao.notification.NotificationTemplateService;
-import org.thingsboard.server.dao.user.UserService;
 import org.thingsboard.server.gen.transport.TransportProtos;
 import org.thingsboard.server.queue.common.TbProtoQueueMsg;
-import org.thingsboard.server.queue.discovery.NotificationsTopicService;
+import org.thingsboard.server.queue.discovery.TopicService;
 import org.thingsboard.server.queue.provider.TbQueueProducerProvider;
-import org.thingsboard.server.service.apiusage.limits.LimitedApi;
-import org.thingsboard.server.service.apiusage.limits.RateLimitService;
-import org.thingsboard.server.service.executors.DbCallbackExecutorService;
 import org.thingsboard.server.service.executors.NotificationExecutorService;
 import org.thingsboard.server.service.notification.channels.NotificationChannel;
 import org.thingsboard.server.service.subscription.TbSubscriptionUtils;
@@ -81,13 +83,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.function.Consumer;
 import java.util.stream.Collectors;
+
+import static org.thingsboard.server.common.data.notification.NotificationDeliveryMethod.WEB;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
-@SuppressWarnings({"UnstableApiUsage", "rawtypes"})
+@SuppressWarnings({"rawtypes"})
 public class DefaultNotificationCenter extends AbstractSubscriptionService implements NotificationCenter, NotificationChannel<User, WebDeliveryMethodNotificationTemplate> {
 
     private final NotificationTargetService notificationTargetService;
@@ -95,17 +98,15 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
     private final NotificationService notificationService;
     private final NotificationTemplateService notificationTemplateService;
     private final NotificationSettingsService notificationSettingsService;
-    private final UserService userService;
     private final NotificationExecutorService notificationExecutor;
-    private final DbCallbackExecutorService dbCallbackExecutorService;
-    private final NotificationsTopicService notificationsTopicService;
+    private final TopicService topicService;
     private final TbQueueProducerProvider producerProvider;
     private final RateLimitService rateLimitService;
 
     private Map<NotificationDeliveryMethod, NotificationChannel> channels;
 
     @Override
-    public NotificationRequest processNotificationRequest(TenantId tenantId, NotificationRequest request, Consumer<NotificationRequestStats> callback) {
+    public NotificationRequest processNotificationRequest(TenantId tenantId, NotificationRequest request, FutureCallback<NotificationRequestStats> callback) {
         if (request.getRuleId() == null) {
             if (!rateLimitService.checkRateLimit(LimitedApi.NOTIFICATION_REQUESTS, tenantId)) {
                 throw new TbRateLimitsException(EntityType.TENANT);
@@ -118,12 +119,24 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
         } else {
             notificationTemplate = request.getTemplate();
         }
-        if (notificationTemplate == null) throw new IllegalArgumentException("Template is missing");
+        if (notificationTemplate == null) {
+            throw new IllegalArgumentException("Template is missing");
+        }
+        NotificationType notificationType = notificationTemplate.getNotificationType();
 
         Set<NotificationDeliveryMethod> deliveryMethods = new HashSet<>();
-        List<NotificationTarget> targets = request.getTargets().stream().map(NotificationTargetId::new)
-                .map(id -> notificationTargetService.findNotificationTargetById(tenantId, id))
-                .collect(Collectors.toList());
+        List<NotificationTarget> targets = new ArrayList<>();
+        for (UUID targetId : request.getTargets()) {
+            NotificationTarget target = notificationTargetService.findNotificationTargetById(tenantId, new NotificationTargetId(targetId));
+            if (target != null) {
+                targets.add(target);
+            } else {
+                log.debug("Unknown notification target {} in request {}", targetId, request);
+            }
+        }
+        if (targets.isEmpty()) {
+            throw new IllegalArgumentException("No recipients chosen");
+        }
 
         NotificationRuleId ruleId = request.getRuleId();
         notificationTemplate.getConfiguration().getDeliveryMethodsTemplates().forEach((deliveryMethod, template) -> {
@@ -131,13 +144,13 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
             try {
                 channels.get(deliveryMethod).check(tenantId);
             } catch (Exception e) {
-                if (ruleId == null) {
+                if (ruleId == null && !notificationType.isSystem()) {
                     throw new IllegalArgumentException(e.getMessage());
                 } else {
-                    return; // if originated by rule - just ignore delivery method
+                    return; // if originated by rule or notification type is system - just ignore delivery method
                 }
             }
-            if (ruleId == null) {
+            if (ruleId == null && !notificationType.isSystem()) {
                 if (targets.stream().noneMatch(target -> target.getConfiguration().getType().getSupportedDeliveryMethods().contains(deliveryMethod))) {
                     throw new IllegalArgumentException("Recipients for " + deliveryMethod.getName() + " delivery method not chosen");
                 }
@@ -158,6 +171,7 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
             }
         }
         NotificationSettings settings = notificationSettingsService.findNotificationSettings(tenantId);
+        NotificationSettings systemSettings = tenantId.isSysTenantId() ? settings : notificationSettingsService.findNotificationSettings(TenantId.SYS_TENANT_ID);
 
         log.debug("Processing notification request (tenantId: {}, targets: {})", tenantId, request.getTargets());
         request.setStatus(NotificationRequestStatus.PROCESSING);
@@ -169,110 +183,175 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
                 .deliveryMethods(deliveryMethods)
                 .template(notificationTemplate)
                 .settings(settings)
+                .systemSettings(systemSettings)
                 .build();
 
-        notificationExecutor.submit(() -> {
-            List<ListenableFuture<Void>> results = new ArrayList<>();
-
-            for (NotificationTarget target : targets) {
-                List<ListenableFuture<Void>> result = processForTarget(target, ctx);
-                results.addAll(result);
-            }
-
-            Futures.whenAllComplete(results).run(() -> {
-                NotificationRequestId requestId = ctx.getRequest().getId();
-                log.debug("[{}] Notification request processing is finished", requestId);
-                NotificationRequestStats stats = ctx.getStats();
-                try {
-                    notificationRequestService.updateNotificationRequest(tenantId, requestId, NotificationRequestStatus.SENT, stats);
-                } catch (Exception e) {
-                    log.error("[{}] Failed to update stats for notification request", requestId, e);
-                }
-
-                if (callback != null) {
-                    try {
-                        callback.accept(stats);
-                    } catch (Exception e) {
-                        log.error("Failed to process callback for notification request {}", requestId, e);
-                    }
-                }
-            }, dbCallbackExecutorService);
-        });
-
+        processNotificationRequestAsync(ctx, targets, callback);
         return request;
     }
 
-    private List<ListenableFuture<Void>> processForTarget(NotificationTarget target, NotificationProcessingContext ctx) {
+    @Override
+    public void sendGeneralWebNotification(TenantId tenantId, UsersFilter recipients, NotificationTemplate template, GeneralNotificationInfo info) {
+        NotificationTarget target = new NotificationTarget();
+        target.setTenantId(tenantId);
+        PlatformUsersNotificationTargetConfig targetConfig = new PlatformUsersNotificationTargetConfig();
+        targetConfig.setUsersFilter(recipients);
+        target.setConfiguration(targetConfig);
+
+        NotificationRequest notificationRequest = NotificationRequest.builder()
+                .tenantId(tenantId)
+                .template(template)
+                .targets(List.of(EntityId.NULL_UUID)) // this is temporary and will be removed when 'create from scratch' functionality is implemented for recipients
+                .info(info)
+                .status(NotificationRequestStatus.PROCESSING)
+                .build();
+        try {
+            notificationRequest = notificationRequestService.saveNotificationRequest(tenantId, notificationRequest);
+            NotificationProcessingContext ctx = NotificationProcessingContext.builder()
+                    .tenantId(tenantId)
+                    .request(notificationRequest)
+                    .deliveryMethods(Set.of(WEB))
+                    .template(template)
+                    .build();
+
+            processNotificationRequestAsync(ctx, List.of(target), null);
+        } catch (Exception e) {
+            log.error("Failed to process notification request for recipients {} for template '{}'", recipients, template.getName(), e);
+        }
+    }
+
+    @Override
+    public void sendSystemNotification(TenantId tenantId, NotificationTargetId targetId, NotificationType type, NotificationInfo info) {
+        log.debug("[{}] Sending {} system notification to {}: {}", tenantId, type, targetId, info);
+        NotificationTemplate notificationTemplate = notificationTemplateService.findTenantOrSystemNotificationTemplate(tenantId, type)
+                .orElseThrow(() -> new IllegalArgumentException("No notification template found for type " + type));
+        NotificationRequest notificationRequest = NotificationRequest.builder()
+                .tenantId(tenantId)
+                .targets(List.of(targetId.getId()))
+                .templateId(notificationTemplate.getId())
+                .info(info)
+                .originatorEntityId(TenantId.SYS_TENANT_ID)
+                .build();
+        processNotificationRequest(tenantId, notificationRequest, null);
+    }
+
+    private void processNotificationRequestAsync(NotificationProcessingContext ctx, List<NotificationTarget> targets, FutureCallback<NotificationRequestStats> callback) {
+        notificationExecutor.submit(() -> {
+            long startTs = System.currentTimeMillis();
+            NotificationRequestId requestId = ctx.getRequest().getId();
+            for (NotificationTarget target : targets) {
+                try {
+                    processForTarget(target, ctx);
+                } catch (Exception e) {
+                    log.error("[{}] Failed to process notification request for target {}", requestId, target.getId(), e);
+                    ctx.getStats().setError(e.getMessage());
+                    updateRequestStats(ctx, requestId, ctx.getStats());
+
+                    if (callback != null) {
+                        callback.onFailure(e);
+                    }
+                    return;
+                }
+            }
+
+            NotificationRequestStats stats = ctx.getStats();
+            long time = System.currentTimeMillis() - startTs;
+            int sent = stats.getTotalSent().get();
+            int errors = stats.getTotalErrors().get();
+            if (errors > 0) {
+                log.debug("[{}][{}] Notification request processing finished in {} ms (sent: {}, errors: {})", ctx.getTenantId(), requestId, time, sent, errors);
+            } else {
+                log.debug("[{}][{}] Notification request processing finished in {} ms (sent: {})", ctx.getTenantId(), requestId, time, sent);
+            }
+            updateRequestStats(ctx, requestId, stats);
+            if (callback != null) {
+                callback.onSuccess(stats);
+            }
+        });
+    }
+
+    private void updateRequestStats(NotificationProcessingContext ctx, NotificationRequestId requestId, NotificationRequestStats stats) {
+        try {
+            notificationRequestService.updateNotificationRequest(ctx.getTenantId(), requestId, NotificationRequestStatus.SENT, stats);
+        } catch (Exception e) {
+            log.error("[{}] Failed to update stats for notification request", requestId, e);
+        }
+    }
+
+    private void processForTarget(NotificationTarget target, NotificationProcessingContext ctx) {
         Iterable<? extends NotificationRecipient> recipients;
         switch (target.getConfiguration().getType()) {
-            case PLATFORM_USERS: {
+            case PLATFORM_USERS -> {
                 PlatformUsersNotificationTargetConfig targetConfig = (PlatformUsersNotificationTargetConfig) target.getConfiguration();
-                if (targetConfig.getUsersFilter().getType().isForRules()) {
+                if (targetConfig.getUsersFilter().getType().isForRules() && ctx.getRequest().getInfo() instanceof RuleOriginatedNotificationInfo) {
                     recipients = new PageDataIterable<>(pageLink -> {
                         return notificationTargetService.findRecipientsForRuleNotificationTargetConfig(ctx.getTenantId(), targetConfig, (RuleOriginatedNotificationInfo) ctx.getRequest().getInfo(), pageLink);
-                    }, 500);
+                    }, 256);
                 } else {
                     recipients = new PageDataIterable<>(pageLink -> {
-                        return notificationTargetService.findRecipientsForNotificationTargetConfig(ctx.getTenantId(), targetConfig, pageLink);
-                    }, 500);
+                        return notificationTargetService.findRecipientsForNotificationTargetConfig(target.getTenantId(), targetConfig, pageLink);
+                    }, 256);
                 }
-                break;
             }
-            case SLACK: {
+            case SLACK -> {
                 SlackNotificationTargetConfig targetConfig = (SlackNotificationTargetConfig) target.getConfiguration();
                 recipients = List.of(targetConfig.getConversation());
-                break;
             }
-            default: {
-                recipients = Collections.emptyList();
+            case MICROSOFT_TEAMS -> {
+                MicrosoftTeamsNotificationTargetConfig targetConfig = (MicrosoftTeamsNotificationTargetConfig) target.getConfiguration();
+                recipients = List.of(targetConfig);
             }
+            default -> recipients = Collections.emptyList();
         }
 
         Set<NotificationDeliveryMethod> deliveryMethods = new HashSet<>(ctx.getDeliveryMethods());
         deliveryMethods.removeIf(deliveryMethod -> !target.getConfiguration().getType().getSupportedDeliveryMethods().contains(deliveryMethod));
         log.debug("[{}] Processing notification request for {} target ({}) for delivery methods {}", ctx.getRequest().getId(), target.getConfiguration().getType(), target.getId(), deliveryMethods);
+        if (deliveryMethods.isEmpty()) {
+            return;
+        }
 
-        List<ListenableFuture<Void>> results = new ArrayList<>();
-        if (!deliveryMethods.isEmpty()) {
-            for (NotificationRecipient recipient : recipients) {
-                for (NotificationDeliveryMethod deliveryMethod : deliveryMethods) {
-                    ListenableFuture<Void> resultFuture = processForRecipient(deliveryMethod, recipient, ctx);
-                    DonAsynchron.withCallback(resultFuture, result -> {
-                        ctx.getStats().reportSent(deliveryMethod, recipient);
-                    }, error -> {
-                        ctx.getStats().reportError(deliveryMethod, error, recipient);
-                    });
-                    results.add(resultFuture);
+        for (NotificationRecipient recipient : recipients) {
+            for (NotificationDeliveryMethod deliveryMethod : deliveryMethods) {
+                try {
+                    processForRecipient(deliveryMethod, recipient, ctx);
+                    ctx.getStats().reportSent(deliveryMethod, recipient);
+                } catch (Exception error) {
+                    ctx.getStats().reportError(deliveryMethod, error, recipient);
                 }
             }
         }
-        return results;
     }
 
-    private ListenableFuture<Void> processForRecipient(NotificationDeliveryMethod deliveryMethod, NotificationRecipient recipient, NotificationProcessingContext ctx) {
+    private void processForRecipient(NotificationDeliveryMethod deliveryMethod, NotificationRecipient recipient, NotificationProcessingContext ctx) throws Exception {
         if (ctx.getStats().contains(deliveryMethod, recipient.getId())) {
-            return Futures.immediateFailedFuture(new AlreadySentException());
+            throw new AlreadySentException();
+        } else {
+            ctx.getStats().reportProcessed(deliveryMethod, recipient.getId());
         }
 
-        DeliveryMethodNotificationTemplate processedTemplate;
-        try {
-            processedTemplate = ctx.getProcessedTemplate(deliveryMethod, recipient);
-        } catch (Exception e) {
-            return Futures.immediateFailedFuture(e);
+        if (recipient instanceof User) {
+            UserNotificationSettings settings = notificationSettingsService.getUserNotificationSettings(ctx.getTenantId(), ((User) recipient).getId(), false);
+            if (!settings.isEnabled(ctx.getNotificationType(), deliveryMethod)) {
+                throw new RuntimeException("User disabled " + deliveryMethod.getName() + " notifications of this type");
+            }
         }
 
         NotificationChannel notificationChannel = channels.get(deliveryMethod);
+        DeliveryMethodNotificationTemplate processedTemplate = ctx.getProcessedTemplate(deliveryMethod, recipient);
+
         log.trace("[{}] Sending {} notification for recipient {}", ctx.getRequest().getId(), deliveryMethod, recipient);
-        return notificationChannel.sendNotification(recipient, processedTemplate, ctx);
+        notificationChannel.sendNotification(recipient, processedTemplate, ctx);
     }
 
     @Override
-    public ListenableFuture<Void> sendNotification(User recipient, WebDeliveryMethodNotificationTemplate processedTemplate, NotificationProcessingContext ctx) {
+    public void sendNotification(User recipient, WebDeliveryMethodNotificationTemplate processedTemplate, NotificationProcessingContext ctx) throws Exception {
         NotificationRequest request = ctx.getRequest();
         Notification notification = Notification.builder()
                 .requestId(request.getId())
                 .recipientId(recipient.getId())
-                .type(ctx.getNotificationTemplate().getNotificationType())
+                .type(ctx.getNotificationType())
+                .deliveryMethod(WEB)
                 .subject(processedTemplate.getSubject())
                 .text(processedTemplate.getBody())
                 .additionalConfig(processedTemplate.getAdditionalConfig())
@@ -283,14 +362,14 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
             notification = notificationService.saveNotification(recipient.getTenantId(), notification);
         } catch (Exception e) {
             log.error("Failed to create notification for recipient {}", recipient.getId(), e);
-            return Futures.immediateFailedFuture(e);
+            throw e;
         }
 
         NotificationUpdate update = NotificationUpdate.builder()
                 .created(true)
                 .notification(notification)
                 .build();
-        return onNotificationUpdate(recipient.getTenantId(), recipient.getId(), update);
+        onNotificationUpdate(recipient.getTenantId(), recipient.getId(), update);
     }
 
     @Override
@@ -298,19 +377,23 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
         boolean updated = notificationService.markNotificationAsRead(tenantId, recipientId, notificationId);
         if (updated) {
             log.trace("Marked notification {} as read (recipient id: {}, tenant id: {})", notificationId, recipientId, tenantId);
-            NotificationUpdate update = NotificationUpdate.builder()
-                    .updated(true)
-                    .notificationId(notificationId.getId())
-                    .newStatus(NotificationStatus.READ)
-                    .build();
-            onNotificationUpdate(tenantId, recipientId, update);
+            Notification notification = notificationService.findNotificationById(tenantId, notificationId);
+            if (notification.getDeliveryMethod() == WEB) {
+                NotificationUpdate update = NotificationUpdate.builder()
+                        .updated(true)
+                        .notificationId(notificationId.getId())
+                        .notificationType(notification.getType())
+                        .newStatus(NotificationStatus.READ)
+                        .build();
+                onNotificationUpdate(tenantId, recipientId, update);
+            }
         }
     }
 
     @Override
-    public void markAllNotificationsAsRead(TenantId tenantId, UserId recipientId) {
-        int updatedCount = notificationService.markAllNotificationsAsRead(tenantId, recipientId);
-        if (updatedCount > 0) {
+    public void markAllNotificationsAsRead(TenantId tenantId, NotificationDeliveryMethod deliveryMethod, UserId recipientId) {
+        int updatedCount = notificationService.markAllNotificationsAsRead(tenantId, deliveryMethod, recipientId);
+        if (updatedCount > 0 && deliveryMethod == WEB) {
             log.trace("Marked all notifications as read (recipient id: {}, tenant id: {})", recipientId, tenantId);
             NotificationUpdate update = NotificationUpdate.builder()
                     .updated(true)
@@ -325,7 +408,7 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
     public void deleteNotification(TenantId tenantId, UserId recipientId, NotificationId notificationId) {
         Notification notification = notificationService.findNotificationById(tenantId, notificationId);
         boolean deleted = notificationService.deleteNotification(tenantId, recipientId, notificationId);
-        if (deleted) {
+        if (deleted && notification.getDeliveryMethod() == WEB) {
             NotificationUpdate update = NotificationUpdate.builder()
                     .deleted(true)
                     .notification(notification)
@@ -335,7 +418,7 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
     }
 
     @Override
-    public Set<NotificationDeliveryMethod> getAvailableDeliveryMethods(TenantId tenantId) {
+    public List<NotificationDeliveryMethod> getAvailableDeliveryMethods(TenantId tenantId) {
         return channels.values().stream()
                 .filter(channel -> {
                     try {
@@ -346,7 +429,7 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
                     }
                 })
                 .map(NotificationChannel::getDeliveryMethod)
-                .collect(Collectors.toSet());
+                .sorted().toList();
     }
 
     @Override
@@ -357,7 +440,7 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
     public void deleteNotificationRequest(TenantId tenantId, NotificationRequestId notificationRequestId) {
         log.debug("Deleting notification request {}", notificationRequestId);
         NotificationRequest notificationRequest = notificationRequestService.findNotificationRequestById(tenantId, notificationRequestId);
-        notificationRequestService.deleteNotificationRequest(tenantId, notificationRequestId);
+        notificationRequestService.deleteNotificationRequest(tenantId, notificationRequest);
 
         if (notificationRequest.isSent()) {
             // TODO: no need to send request update for other than PLATFORM_USERS target type
@@ -365,9 +448,6 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
                     .notificationRequestId(notificationRequestId)
                     .deleted(true)
                     .build());
-        } else if (notificationRequest.isScheduled()) {
-            // TODO: just forward to scheduler service
-            clusterService.broadcastEntityStateChangeEvent(tenantId, notificationRequestId, ComponentLifecycleEvent.DELETED);
         }
     }
 
@@ -384,13 +464,11 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
         clusterService.pushMsgToCore(tenantId, notificationRequestId, toCoreMsg, null);
     }
 
-    private ListenableFuture<Void> onNotificationUpdate(TenantId tenantId, UserId recipientId, NotificationUpdate update) {
+    private void onNotificationUpdate(TenantId tenantId, UserId recipientId, NotificationUpdate update) {
         log.trace("Submitting notification update for recipient {}: {}", recipientId, update);
-        return Futures.submit(() -> {
-            forwardToSubscriptionManagerService(tenantId, recipientId, subscriptionManagerService -> {
-                subscriptionManagerService.onNotificationUpdate(tenantId, recipientId, update, TbCallback.EMPTY);
-            }, () -> TbSubscriptionUtils.notificationUpdateToProto(tenantId, recipientId, update));
-        }, wsCallBackExecutor);
+        forwardToSubscriptionManagerService(tenantId, recipientId, subscriptionManagerService -> {
+            subscriptionManagerService.onNotificationUpdate(tenantId, recipientId, update, TbCallback.EMPTY);
+        }, () -> TbSubscriptionUtils.notificationUpdateToProto(tenantId, recipientId, update));
     }
 
     private void onNotificationRequestUpdate(TenantId tenantId, NotificationRequestUpdate update) {
@@ -399,7 +477,7 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
             TransportProtos.ToCoreNotificationMsg notificationRequestUpdateProto = TbSubscriptionUtils.notificationRequestUpdateToProto(tenantId, update);
             Set<String> coreServices = new HashSet<>(partitionService.getAllServiceIds(ServiceType.TB_CORE));
             for (String serviceId : coreServices) {
-                TopicPartitionInfo tpi = notificationsTopicService.getNotificationsTopic(ServiceType.TB_CORE, serviceId);
+                TopicPartitionInfo tpi = topicService.getNotificationsTopic(ServiceType.TB_CORE, serviceId);
                 producerProvider.getTbCoreNotificationsMsgProducer().send(tpi, new TbProtoQueueMsg<>(UUID.randomUUID(), notificationRequestUpdateProto), null);
             }
         });
@@ -407,7 +485,7 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
 
     @Override
     public NotificationDeliveryMethod getDeliveryMethod() {
-        return NotificationDeliveryMethod.WEB;
+        return WEB;
     }
 
     @Override
@@ -418,7 +496,7 @@ public class DefaultNotificationCenter extends AbstractSubscriptionService imple
     @Autowired
     public void setChannels(List<NotificationChannel> channels, NotificationCenter webNotificationChannel) {
         this.channels = channels.stream().collect(Collectors.toMap(NotificationChannel::getDeliveryMethod, c -> c));
-        this.channels.put(NotificationDeliveryMethod.WEB, (NotificationChannel) webNotificationChannel);
+        this.channels.put(WEB, (NotificationChannel) webNotificationChannel);
     }
 
 }
